Fix Java 8 syntax.